Fix image attribution being too wide on mobile

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -155,6 +155,7 @@
   display: block;
   margin: auto;
   width: max-content;
+  max-width: 100%;
 }
 
 // Responsive margin
